samples/_failures_safe/1761374239_dffd0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f712225b.c: In function ‘main’:
./samples/SAFE/__tmp_f712225b.c:183:5: error: expected declaration or statement at end of input
  183 |     if (len > 0 && input[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_f712225b.c:183:5: error: expected declaration or statement at end of input
